--- a/Activity1/todo.html
+++ b/Activity1/todo.html
@@ -15,7 +15,7 @@
         <!-- Task Input -->
         <div class="input-group mb-3">
             <input type="text" class="form-control mb-3" placeholder="Add a new task" id="taskInput">
-            <button class="btn btn-primary mb-3" type="button" onclick="addTask()">Add Task</button>
+            <button class="btn btn-primary mb-3" type="button" id="button">Add Task</button>
         </div>
 
         <!-- Task List -->
