--- a/Activity3/greet.html
+++ b/Activity3/greet.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="./greet.css">
   <title>Greeting Form</title>
 </head>
 <body>
@@ -17,6 +17,6 @@
     <div id="greetingMessage"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="./greet.js"></script>
 </body>
 </html>
